Restrict JS linting to component client-side files only, fixes issue with 3rd party libs

--- a/myalfresco-dashlets/pom.xml
+++ b/myalfresco-dashlets/pom.xml
@@ -120,7 +120,7 @@
                 </executions>
                 <configuration>
                     <directories>
-                        <directory>src/main/resources</directory>
+                        <directory>src/main/resources/META-INF/extras/components</directory>
                     </directories>
                 </configuration>
             </plugin>
