API Console - Change name to Cloud API Explorer

--- a/myalfresco-dashlets/src/main/resources/alfresco/messages/console-myalfresco-api.properties
+++ b/myalfresco-dashlets/src/main/resources/alfresco/messages/console-myalfresco-api.properties
@@ -1,2 +1,2 @@
-tool.myalfresco-api.label=API Explorer
-tool.myalfresco-api.description=Execute calls against the MyAlfresco public API
+tool.myalfresco-api.label=Cloud API Explorer
+tool.myalfresco-api.description=Execute remote calls against the Alfresco Cloud Public API
