--- a/myalfresco-dashlets/src/main/resources/alfresco/site-webscripts/org/sharextras/components/console/myalfresco-api.get.properties
+++ b/myalfresco-dashlets/src/main/resources/alfresco/site-webscripts/org/sharextras/components/console/myalfresco-api.get.properties
@@ -1,5 +1,5 @@
 # Console Main Panel
-label.title-form=MyAlfresco API Explorer
+label.title-form=Cloud API Explorer
 
 # Form labels
 label.Path=Resource
