Detect when a 401 response is returned from the Cloud API and display a Connect button - removes dependency on the dashlet

--- a/myalfresco-dashlets/src/main/resources/alfresco/site-webscripts/org/sharextras/components/console/myalfresco-api.get.properties
+++ b/myalfresco-dashlets/src/main/resources/alfresco/site-webscripts/org/sharextras/components/console/myalfresco-api.get.properties
@@ -10,6 +10,12 @@ label.execute.key=or Enter
 message.success=Executed {0} in {1} ms
 message.failure=Failed to execute command
 
+# Errors
+error.loadNetworks=Could not load network list
+
+message.notConnected=In order to use this console you must first authorize the application to connect to MyAlfresco
+button.connect=Connect to MyAlfresco
+
 # Help text
 label.help=Help
 message.formatHelp=<p>For <strong>CSV/TSV</strong> data, specify one user per line, with fields separated by commas or tabs. Field order is first name, last name, e-mail, username (optional) and password (optional).</p><pre>Joe,Bloggs,joe.blogs@company.com\nAlex,Smith,alex.smith@company.com,asmith,mypassword</pre><p>For <strong>JSON</strong> data, specify an array of object literals. Objects must have the fields <tt>firstName</tt>, <tt>lastName</tt> and <tt>email</tt>. The optional fields <tt>username</tt> and <tt>password</tt> can also be specified.</p><pre>[\n   {\n      firstName: &quot;Joe&quot;,\n      lastName: &quot;Bloggs&quot;,\n      email: &quot;joe.bloggs@company.com&quot;\n   },\n   {\n      firstName: &quot;Alex&quot;,\n      lastName: &quot;Smith&quot;,\n      email: &quot;alex.smith@company.com&quot;,\n      username: &quot;asmith&quot;,\n      password: &quot;mypassword&quot;\n   }\n]</pre><p>If not specified then username and password values will be auto-generated according to the default policy.</p>
